# hcatool

./: .coveragerc  .gitreview  HACKING.rst  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
hcatool/: __init__.py  core.py
hcatool/tests/: fit-reuters-LDA-K20-seed5-iter100.ndt  fit-reuters-LDA-K20-seed5-iter100.nwt  fit-reuters-LDA-K20-seed5-iter100.par  test_hcatool.py
